--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -163,26 +163,25 @@ body {
     font-weight: 700;
 }
 
-.site-title-image {
-    width: 100px;
-    display: inline;
-    position: relative;
-    right: -12px;
-    bottom: 11px;
-}
-
 .site-logo {
-    max-height: 120px;
+    max-height: 150px;
+    position: absolute;
+    left: calc(50% - 300px);
 }
 
 .site-description {
+    margin: 0;
+    font-size: 2rem;
+    z-index: 10;
+    letter-spacing: 0.5px;
+}
+
+.site-verse {
     z-index: 10;
     margin: 0;
     padding: 5px 0;
-    font-size: 1em;
-    font-weight: bold;
+    font-size: 1.5rem;
     letter-spacing: 0.5px;
-    opacity: 0.8;
     width: 300px;
 }
 
