--- a/index.hbs
+++ b/index.hbs
@@ -6,15 +6,17 @@ into the {body} of the default.hbs template --}}
 <header class="site-header outer {{#if @blog.cover_image}}" style="background-image: url({{@blog.cover_image}}){{else}}no-cover{{/if}}">
     <div class="inner">
         <div class="site-header-content">
+            <img class="site-logo" src="{{@blog.logo}}" alt="{{@blog.title}}" />
+
             <h1 class="site-title">
-                {{#if @blog.logo}}
-                    <img class="site-logo" src="{{@blog.logo}}" alt="{{@blog.title}}" />
-                {{else}}
-                    <img class="site-title-image" src="/content/images/2018/02/gr_transparent_white_2.png"/>
-                    {{@blog.title}}
-                {{/if}}
+                {{@blog.title}}
             </h1>
-            <h2 class="site-description">{{@blog.description}}</h2>
+            <h2 class="site-description">
+                {{@blog.description}}
+            </h2>
+            <h3 class="site-verse">
+                "May my teaching drop as the rain... like gentle rain upon the tender grass" Deuteronomy 32:2
+            </h3>
         </div>
         {{> "site-nav"}}
     </div>
