Hide GR on small screen

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -194,6 +194,12 @@ body {
     }
 }
 
+@media (max-width: 600px) {
+    .site-logo {
+        display: none;
+    }
+}
+
 
 /* 5. Site Navigation
 /* ---------------------------------------------------------- */
