--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1048,6 +1048,14 @@ Usage (In Ghost editor):
     border: color(var(--whitegrey) l(-1%) s(-5%)) 1px solid;
 }
 
+.post-full-content .kg-width-wide .kg-image {
+    max-width: 1040px;
+}
+
+.post-full-content .kg-width-full .kg-image {
+    max-width: 100vw;
+}
+
 
 /* 7.1. Subscribe Form
 /* ---------------------------------------------------------- */
