--- a/post.hbs
+++ b/post.hbs
@@ -24,9 +24,9 @@ into the {body} of the default.hbs template --}}
                         <span class="date-divider">/</span> <a href="{{url}}">{{name}}</a>
                     {{/primary_tag}}
                     <span class="date-divider">/</span>
-                    {{#author}}
+                    {{#primary_author}}
                         <a href="{{url}}">{{name}}</a>
-                    {{/author}}
+                    {{/primary_author}}
                 </section>
                 <h1 class="post-full-title">{{title}}</h1>
             </header>
@@ -51,7 +51,7 @@ into the {body} of the default.hbs template --}}
 
             <footer class="post-full-footer">
                 {{!-- Everything inside the #author tags pulls data from the author --}}
-                {{#author}}
+                {{#primary_author}}
 
                 <section class="author-card">
                     {{#if profile_image}}
@@ -70,7 +70,7 @@ into the {body} of the default.hbs template --}}
                     <a class="author-card-button" href="{{url}}">Read More</a>
                 </div>
 
-                {{/author}}
+                {{/primary_author}}
             </footer>
 
             {{!--
