--- a/post.hbs
+++ b/post.hbs
@@ -73,28 +73,9 @@ into the {body} of the default.hbs template --}}
                 {{/primary_author}}
             </footer>
 
-            {{!--
-
-            If you use Disqus comments, just uncomment this block.
-            The only thing you need to change is "test-apkdzgmqhj" - which
-            should be replaced with your own Disqus site-id.
-
             <section class="post-full-comments">
-                <div id="disqus_thread"></div>
-                <script>
-                    var disqus_config = function () {
-                        this.page.url = '{{url absolute="true"}}';
-                        this.page.identifier = 'ghost-{{comment_id}}';
-                    };
-                    (function() {
-                        var d = document, s = d.createElement('script');
-                        s.src = 'https://test-apkdzgmqhj.disqus.com/embed.js';
-                        s.setAttribute('data-timestamp', +new Date());
-                        (d.head || d.body).appendChild(s);
-                    })();
-                </script>
+                <div class="fb-comments" data-href="{{url absolute="true"}}" data-numposts="10"></div>
             </section>
-            --}}
 
         </article>
 
