--- a/partials/post-card.hbs
+++ b/partials/post-card.hbs
@@ -21,7 +21,7 @@
             {{#if primary_author.profile_image}}
                 <img class="author-profile-image" src="{{primary_author.profile_image}}" alt="{{primary_author.name}}" />
             {{/if}}
-            <span class="post-card-author">{{primary_author}}</span>
+            <span class="post-card-author">{{primary_author.name}}</span>
         </footer>
     </div>
 </article>
