Tweaks to authors page max-width

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1994,3 +1994,7 @@ Usage (In Ghost editor):
  .kg-gallery-image:not(:first-of-type) {
     margin: 0 0 0 0.75em;
 }
+
+.page-authors .post-card {
+    max-width: 30%;
+}
