--- a/page-search.hbs
+++ b/page-search.hbs
@@ -25,6 +25,18 @@ into the {body} of the default.hbs template --}}
                     let ghostSearch = new GhostSearch({
                         host: 'https://gentlereformation.ghost.io',
                         key: '4988097ab12ee70a74a4eabdcc',
+                        template: result => '<a href="' + result.url + '">' + result.title + '</a>',
+                        api: {
+                            resource: 'posts',
+                            parameters: {
+                                limit: 'all',
+                                fields: ['title', 'url'],
+                                filter: '',
+                                include: '',
+                                order: '',
+                                formats: '',
+                            },
+                        },
                     });
                 });
             </script>
