--- a/page-search.hbs
+++ b/page-search.hbs
@@ -37,7 +37,7 @@ into the {body} of the default.hbs template --}}
                         resource: 'posts',
                         parameters: {
                             limit: 'all',
-                            fields: ['title', 'url', 'authors'],
+                            fields: ['title', 'url'],
                             filter: '',
                             include: '',
                             order: '',
