--- a/page-search.hbs
+++ b/page-search.hbs
@@ -39,7 +39,7 @@ into the {body} of the default.hbs template --}}
                             limit: 'all',
                             fields: ['title', 'url'],
                             filter: '',
-                            include: '',
+                            include: 'authors',
                             order: '',
                             formats: '',
                         },
