Try default search value

--- a/page-search.hbs
+++ b/page-search.hbs
@@ -27,6 +27,7 @@ into the {body} of the default.hbs template --}}
                     host: 'https://gentlereformation.ghost.io',
                     key: '4988097ab12ee70a74a4eabdcc',
                     template: result => '<a href="' + result.url + '" style="display: block;">' + result.title + '</a>',
+                    defaultValue: 'reformation',
                     api: {
                         resource: 'posts',
                         parameters: {
